@@ -1,5 +1,11 @@
 2006-03-09  Matthias Hopf  <mhopf@suse.de>
 
+	* GL/mesa/Makefile.am: added missing glapi to SUBDIRS.
+	* cfb/Makefile.am, cfb16/Makefile.am, cfb24/Makefile.am, cfb32/Makefile.am:
+	  Added missing -I$(top_srcdir)/hw/xfree86/common.
+
+2006-03-09  Matthias Hopf  <mhopf@suse.de>
+
 	* configure.ac: Do Xorg configure checks for Xgl only as well
 	  Remove creation of exa/Makefile (broken ATM).
 
